# blackbox-terminal

./: CHANGELOG.md  README.md  meson.build
data/: com.raggesilver.BlackBox.gschema.xml  com.raggesilver.BlackBox.metainfo.xml.in
src/gtk/: header-bar.ui  tab-menu.ui  terminal-tab.ui
src/services/: ProcessWatcher.vala  SSHProfiles.vala  Settings.vala  meson.build
src/widgets/: ColorSchemeThumbnail.vala  HeaderBar.vala  SSHManagerWindow.vala  TerminalTab.vala  Window.vala  meson.build
