blackbox_sources += files(
  'AboutDialog.vala',
  'ColorSchemeThumbnail.vala',
  'HeaderBar.vala',
  'PreferencesWindow.vala',
  'SSHManagerWindow.vala',
  'SearchToolbar.vala',
  'ShortcutDialog.vala',
  'ShortcutEditor.vala',
  'StyleSwitcher.vala',
  'Terminal.vala',
  'TerminalTab.vala',
  'Window.vala',
)
